[gd_scene load_steps=34 format=3 uid="uid://dyitfsyes3tf1"]

[ext_resource type="Script" path="res://scenes/minigames/hit-on-point/hit_and_point.gd" id="1_cbqai"]
[ext_resource type="Texture2D" uid="uid://dme3ridhqxj24" path="res://art/minigame_1/minigame-bar.png" id="2_iw632"]
[ext_resource type="Texture2D" uid="uid://cw84lbx1mipsu" path="res://art/minigame_1/pumpkin-target.png" id="3_quqot"]
[ext_resource type="Texture2D" uid="uid://bg728tueoylh6" path="res://art/particles/candy-orange.png" id="4_b2bsp"]
[ext_resource type="Script" path="res://scenes/minigames/hit-on-point/point.gd" id="5_jwv80"]
[ext_resource type="PackedScene" uid="uid://caayud880f1yk" path="res://scenes/UI/spookometer/spookometer.tscn" id="6_jp7rm"]
[ext_resource type="Texture2D" uid="uid://b2skrx7f0d1x2" path="res://art/minigame_1/minigame-avatar.png" id="6_pepe0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qs7va"]
atlas = ExtResource("3_quqot")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpoec"]
atlas = ExtResource("3_quqot")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpvir"]
atlas = ExtResource("3_quqot")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u34q2"]
atlas = ExtResource("3_quqot")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8q71"]
atlas = ExtResource("3_quqot")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ol4br"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qs7va")
}, {
"duration": 6.0,
"texture": SubResource("AtlasTexture_lpoec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qs7va")
}],
"loop": false,
"name": &"fail",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpvir")
}, {
"duration": 6.0,
"texture": SubResource("AtlasTexture_u34q2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpvir")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8q71")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_afwbb"]
size = Vector2(13, 21)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3o7ct"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 100.0
initial_velocity_max = 311.83
angular_velocity_min = -449.03
angular_velocity_max = -54.19
gravity = Vector3(0, 100, 0)
turbulence_noise_strength = 10.25
turbulence_noise_scale = 8.95

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gnvwx"]
size = Vector2(3.5, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_voyvw"]
atlas = ExtResource("6_pepe0")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a68od"]
atlas = ExtResource("6_pepe0")
region = Rect2(32, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_733l2"]
atlas = ExtResource("6_pepe0")
region = Rect2(64, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxu1s"]
atlas = ExtResource("6_pepe0")
region = Rect2(0, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnmha"]
atlas = ExtResource("6_pepe0")
region = Rect2(32, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ln4w6"]
atlas = ExtResource("6_pepe0")
region = Rect2(64, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5xxg"]
atlas = ExtResource("6_pepe0")
region = Rect2(0, 96, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8ixp"]
atlas = ExtResource("6_pepe0")
region = Rect2(32, 96, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_txwsy"]
atlas = ExtResource("6_pepe0")
region = Rect2(64, 96, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_mvnji"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_voyvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a68od")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_733l2")
}],
"loop": false,
"name": &"happy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxu1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnmha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln4w6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5xxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8ixp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txwsy")
}],
"loop": true,
"name": &"mad",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_kiw3n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bar:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Target:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.0174533]
}

[sub_resource type="Animation" id="Animation_ja8uh"]
resource_name = "shake_on_fail"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bar:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 0.307786),
"update": 0,
"values": [0.0174533, -0.0698132, -0.0174533, 0.0698132, 0.0174533, -0.0349066, -0.0174533, 0.0349066, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Target:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.833333),
"transitions": PackedFloat32Array(1, 0.535887, 1, 1, 1, 1, 1, 1, 0.366022),
"update": 0,
"values": [0.0174533, -0.0349066, 0.0174533, 0.0349066, 0.0174533, -0.0349066, 0.0349066, 0.0174533, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c0at1"]
_data = {
"RESET": SubResource("Animation_kiw3n"),
"shake_on_fail": SubResource("Animation_ja8uh")
}

[sub_resource type="Curve2D" id="Curve2D_v350s"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -60, -49, 0, 0, 0, 0, 60, -49, 0, 0, 0, 0, -60, -49)
}
point_count = 3

[sub_resource type="AtlasTexture" id="AtlasTexture_f22uq"]
atlas = ExtResource("3_quqot")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5oapx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f22uq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jlnvj"]
size = Vector2(2, 24)

[node name="Hit-and-point" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_cbqai")
min_score_baseline = 15

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
self_modulate = Color(0.0823529, 0.0862745, 0.25098, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Bar" type="Sprite2D" parent="CanvasLayer/Background"]
position = Vector2(78, 23)
texture = ExtResource("2_iw632")

[node name="Target" type="AnimatedSprite2D" parent="CanvasLayer/Background"]
unique_name_in_owner = true
position = Vector2(76, 20)
rotation = -0.0174533
sprite_frames = SubResource("SpriteFrames_ol4br")
animation = &"fail"

[node name="TargetAreaNormal" type="Area2D" parent="CanvasLayer/Background/Target"]
position = Vector2(1, -1)
collision_layer = 8
collision_mask = 8
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Background/Target/TargetAreaNormal"]
position = Vector2(-1.5, 2.5)
shape = SubResource("RectangleShape2D_afwbb")
debug_color = Color(0.496567, 0.581912, 0.0483412, 0.42)

[node name="NormalParticles" type="GPUParticles2D" parent="CanvasLayer/Background/Target/TargetAreaNormal"]
unique_name_in_owner = true
emitting = false
amount = 4
process_material = SubResource("ParticleProcessMaterial_3o7ct")
texture = ExtResource("4_b2bsp")
lifetime = 0.3
one_shot = true
explosiveness = 1.0
randomness = 1.0

[node name="TargetAreaPerfect" type="Area2D" parent="CanvasLayer/Background/Target"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Background/Target/TargetAreaPerfect"]
position = Vector2(-0.25, 2)
shape = SubResource("RectangleShape2D_gnvwx")
debug_color = Color(0.891414, 0.261776, 0.49239, 0.42)

[node name="PerfectParticles" type="GPUParticles2D" parent="CanvasLayer/Background/Target/TargetAreaPerfect"]
unique_name_in_owner = true
emitting = false
amount = 12
process_material = SubResource("ParticleProcessMaterial_3o7ct")
texture = ExtResource("4_b2bsp")
lifetime = 0.4
one_shot = true
explosiveness = 1.0
randomness = 1.0
interp_to_end = 1.0

[node name="PlayerAvatar" type="AnimatedSprite2D" parent="CanvasLayer/Background"]
unique_name_in_owner = true
position = Vector2(38, 90)
sprite_frames = SubResource("SpriteFrames_mvnji")
animation = &"happy"
frame = 2
frame_progress = 1.0
speed_scale = 0.75

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Background"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_c0at1")
}

[node name="Spookometer" parent="CanvasLayer/Background" instance=ExtResource("6_jp7rm")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 115.0
offset_top = 50.0
offset_right = 115.0
offset_bottom = 50.0

[node name="Path2D" type="Path2D" parent="CanvasLayer"]
position = Vector2(80, 72)
curve = SubResource("Curve2D_v350s")

[node name="PathFollow2D" type="PathFollow2D" parent="CanvasLayer/Path2D"]
unique_name_in_owner = true
position = Vector2(-60, -49)
rotates = false
cubic_interp = false

[node name="Point" type="AnimatedSprite2D" parent="CanvasLayer/Path2D/PathFollow2D"]
position = Vector2(-1, -2)
sprite_frames = SubResource("SpriteFrames_5oapx")
script = ExtResource("5_jwv80")

[node name="PointerArea" type="Area2D" parent="CanvasLayer/Path2D/PathFollow2D/Point"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Path2D/PathFollow2D/Point/PointerArea"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_jlnvj")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="area_entered" from="CanvasLayer/Background/Target/TargetAreaNormal" to="CanvasLayer/Path2D/PathFollow2D/Point" method="_on_target_area_normal_area_entered"]
[connection signal="area_exited" from="CanvasLayer/Background/Target/TargetAreaNormal" to="CanvasLayer/Path2D/PathFollow2D/Point" method="_on_target_area_normal_area_exited"]
[connection signal="area_entered" from="CanvasLayer/Background/Target/TargetAreaPerfect" to="CanvasLayer/Path2D/PathFollow2D/Point" method="_on_target_area_perfect_area_entered"]
[connection signal="area_exited" from="CanvasLayer/Background/Target/TargetAreaPerfect" to="CanvasLayer/Path2D/PathFollow2D/Point" method="_on_target_area_perfect_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
